Pidgin and Finch: The Pimpin' Penguin IM Clients That're Good for the Soul

version 2.7.1 (??/??/????):
	General:
	* Build fixes on OpenSolaris.  (Brian Lu)

	Pidgin:
	* Restore the tray icon's blinking functionality.
	* Fix a crash setting moods when an account is disconnected.

	Bonjour:
	* Fix a crash on disconnect.

	ICQ:
	* Fix bug that caused HTML to be displayed in incoming messages.

	MSN:
	* Fix unnecessary bandwidth consumption for buddy icon requests when
	  buddies have capital letters in their passport addresses.
	* Support for direct connections, enabling faster file transfers,
	  smiley and buddy icon loading.  (Gábor Szuromi)

	XMPP:
	* Allow connecting to servers that advertise EXTERNAL (broken in
	  2.7.0)

	Windows-Specific Changes:
	* Fix a regression introduced in 2.7.0 that caused Window Flashing not
	  to work.

version 2.7.0 (05/12/2010):
	General:
	* Changed GTK+ minimum version requirement to 2.10.0.
	* Changed GLib minimum version requirement to 2.12.0.
	* Using the --disable-nls argument to configure now works properly.
	  You will no longer be forced to have intltool to configure and build.
	* Fix two related crashes in the GnuTLS and NSS plugins when they
	  suffer internal errors immediately upon attempting to establish
	  an SSL connection.
	* Fix NSS to work when reinitialized after being used.  (Thanks to
	  Ludovico Cavedon for the testcase)
	* Added support for PURPLE_GNUTLS_PRIORITIES environment variable.
	  This can be used to specify GnuTLS priorities on a per-host basis.
	  The format is "host=priority;host2=priority;...".  The default
	  priority can be overridden by using "*" as the host.  See the
	  GnuTLS manual for documentation on the format of the priority
	  strings.
	* Fix autoconf detection of Python.  (Brad Smith)
	* Fix a crash when a Windows proxy (from IE) does not have a port.
	  (Marten Klencke)

	Pidgin:
	* Moved the "Debugging Information" section of the About box to a